@@ -4,6 +4,7 @@ CHANGELOG
 UTIL:
 * type=addressgroup-/servicegroup-merger - add additional output reason if groups can not be merged
 * type=userid-mgr | correct usage of objectsLocation variable
+* type=rule ruletype=nat | introduce 'actions=SNAT-set-interface:INTERFACE-NAME'
 
 BUGFIX:
 * type=appid-toolbox | bugfix for none declared variable php 8.1
